--- a/betterkoreankotlin/build.gradle
+++ b/betterkoreankotlin/build.gradle
@@ -1,18 +1,19 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plubin: 'com.github.dcendents.android-maven'
+apply plugin: 'com.github.dcendents.android-maven'
 
 group = 'com.github.n42corp'
-version = '0.9'
+version = '0.9.3'
 
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
 
-
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 25
+        versionCode 2
+        version "0.9.3"
     }
 
     lintOptions {
@@ -21,11 +22,5 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    testCompile 'junit:junit:4.12'
 }
